# voices-summary

./: .gitignore  LICENSE  README.md  index.html  package.json  tsconfig.json
_bmad/_config/: agent-manifest.csv  bmad-help.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/_config/ides/: claude-code.yaml  cursor.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
_bmad/wds/: config.yaml
docs/: prd.md
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  db.rs  device.rs  errors.rs  lib.rs  main.rs  models.rs  providers.rs
src-tauri/src/services/: ingestion.rs  jobs.rs  mod.rs
src/lib/: api.ts
src/types/: models.ts
