[package]
name = "voices-summary"
version = "0.1.0"
description = "Windows tray app for recorder synchronization, transcription, and summarization."
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "voices_summary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["serde"] }
directories = "6.0.0"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.33.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tauri = { version = "2.3.1", features = ["tray-icon"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
walkdir = "2.5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
